// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebsitePasswordDialog tests Clears errors when onChange is called 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordBlank_resx
</div>
`;

exports[`WebsitePasswordDialog tests Displays 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 2.5rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                      >
                        Website Passcode Title
                      </div>
                      <div>
                        <div>
                          <div
                            class=""
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                          >
                            <div
                              class=""
                            >
                              <div
                                class=""
                              >
                                <div>
                                  EventGuestSide_WebsitePassword_HelpText__resx
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="element"
                          >
                            <label
                              class="labelOnTop"
                              for="websitePassword"
                              style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </label>
                            <div
                              class="inputContainerOnRight"
                            >
                              <div
                                class=""
                              >
                                <input
                                  class=""
                                  data-cvent-id="input"
                                  id="websitePassword"
                                  name="websitePassword"
                                  placeholder=""
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                  type="password"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <button
                            class=""
                            data-cvent-id="submit-password-button"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                          >
                            EventGuestSide_WebsitePassword_SubmitButton__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`WebsitePasswordDialog tests Displays empty message when input is empty and Enter key is pressed 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordBlank_resx
</div>
`;

exports[`WebsitePasswordDialog tests Displays empty message when input is empty on blur 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordBlank_resx
</div>
`;

exports[`WebsitePasswordDialog tests Displays empty message when input is empty on submit 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordBlank_resx
</div>
`;

exports[`WebsitePasswordDialog tests Displays incorrect message when input password is incorrect, on Enter keypress 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordInvalid__resx
</div>
`;

exports[`WebsitePasswordDialog tests Displays incorrect message when input password is incorrect, on submit 1`] = `
<div
  class="errorText"
  data-cvent-id="error-message"
  role="alert"
>
  EventGuestSide_WebsitePassword_PasswordInvalid__resx
</div>
`;

exports[`WebsitePasswordDialog tests for archived event Displays 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <div
                        class=""
                        style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 2.5rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                      >
                        Website Passcode Title
                      </div>
                      <div>
                        <div>
                          <div
                            class=""
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                          >
                            <div
                              class=""
                            >
                              <div
                                class=""
                              >
                                <div>
                                  EventGuestSide_WebsitePassword_HelpText__resx
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="element"
                          >
                            <label
                              class="labelOnTop"
                              for="websitePassword"
                              style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                            >
                              <span
                                class=""
                              >
                                <span
                                  data-cvent-id="label"
                                />
                              </span>
                            </label>
                            <div
                              class="inputContainerOnRight"
                            >
                              <div
                                class=""
                              >
                                <input
                                  class=""
                                  data-cvent-id="input"
                                  id="websitePassword"
                                  name="websitePassword"
                                  placeholder=""
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                  type="password"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <button
                            class=""
                            data-cvent-id="submit-password-button"
                            style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                          >
                            EventGuestSide_WebsitePassword_SubmitButton__resx
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;
